1 pixel shift fix for selected listing

--- a/app/stylesheets/theme/_common/style.scss
+++ b/app/stylesheets/theme/_common/style.scss
@@ -608,7 +608,7 @@ table .partial { margin: 0.25em 0; }
           a {
             background: #ECF2E3;
             @include linear-gradient(#ecf2e3, #e3ead9);
-            border-left: 5px solid #8FCB3A; 
+            border-left: 6px solid #8FCB3A; 
           } 
         }
         &.orange,&.latest {
